# Projeto-CRUD-JD

./: README.md  pyproject.toml
